# Lablib

./: CMakeLists.txt  README.md  main.c
include/: button.h  cursor.h  input.h  lablib.h  scene.h  settings.h  struct.h
lib/: button.c  cursor.c  input.c  lablib.c  scene.c
